--- a/La Foret Sustentabilidade/paginas/contato.html
+++ b/La Foret Sustentabilidade/paginas/contato.html
@@ -25,7 +25,7 @@
 					<a id="menu" class="nav-link" href="../paginas/colabore.html">Colabore</a>
 				</li>
 				<li class="nav-item">
-					<a id="menu" class="nav-link" href="../paginas/contato.html">Fale Conosco</a>
+					<a id="menu" class="nav-link" href="../paginas/contato.html">Contato</a>
 				</li>
 			</ul>
 		</main>
